discoveryserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discoveryserver
  labels:
    app: discoveryserver
spec:
  replicas: 5
  selector:
    matchLabels:
      app: discoveryserver
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: discoveryserver
    spec:
      securityContext:
        runAsUser: 9001
        runAsGroup: 9001
        fsGroup: 9001
      containers:
      - name: discoveryserver
        image: quay.io/etcd/discoveryserver
        imagePullPolicy: Always
        ports:
        - containerPort: 8087
        securityContext:
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /metrics
            port: 8087
        readinessProbe:
          httpGet:
            path: /health
            port: 8087
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values: ["discoveryserver"]
            topologyKey: kubernetes.io/hostname
