discoveryserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discoveryserver
  labels:
    app: discoveryserver
spec:
  type: NodePort
  selector:
    app: discoveryserver
  ports:
  - protocol: TCP
    port: 30000
    targetPort: 8087
    name: web
